@@ -1,6 +1,7 @@
 vNEXT (in development)
 
  * Added CtcpReceived and ActionReceived events
+ * Added sendCtcp and sendAction message builders
 
 v0.3.1
 
